--- a/config.yaml
+++ b/config.yaml
@@ -12,9 +12,9 @@ axes:
   shared_stepper_disable_pin: NO_PIN
   
   x:
-    steps_per_mm: 800
-    max_rate_mm_per_min: 2000
-    acceleration_mm_per_sec2: 25
+    steps_per_mm: 400
+    max_rate_mm_per_min: 500
+    acceleration_mm_per_sec2: 10
     max_travel_mm: 500
     soft_limits: false
     homing:
@@ -35,14 +35,14 @@ axes:
       pulloff_mm: 1
       standard_stepper:
         direction_pin: gpio.14
-        step_pin: gpio.13
+        step_pin: gpio.13:low
     motor1:
       null_motor:
 
   y:
-    steps_per_mm: 800
-    max_rate_mm_per_min: 2000
-    acceleration_mm_per_sec2: 25
+    steps_per_mm: 400
+    max_rate_mm_per_min: 500
+    acceleration_mm_per_sec2: 10
     max_travel_mm: 200
     soft_limits: false
     homing:
@@ -63,14 +63,14 @@ axes:
       pulloff_mm: 1
       standard_stepper:
         direction_pin: gpio.26
-        step_pin: gpio.27
+        step_pin: gpio.27:low
     motor1:
       null_motor:
 
   z:
     steps_per_mm: 800
-    max_rate_mm_per_min: 2000
-    acceleration_mm_per_sec2: 25
+    max_rate_mm_per_min: 1000
+    acceleration_mm_per_sec2: 15
     max_travel_mm: 200
     soft_limits: false
     homing:
@@ -91,7 +91,7 @@ axes:
       pulloff_mm: 1
       standard_stepper:
         direction_pin: gpio.33
-        step_pin: gpio.25
+        step_pin: gpio.25:low
     motor1:
       null_motor:
 
